# annatar

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md
resources/: annatar.nuspec
src/: annotation.rs  application.rs  config.rs  error.rs  main.rs  options.rs
src/config/: mod.rs  options.rs  resource.rs  scaled_annotation.rs
