[package]
name = "annatar"
version = "0.6.15"
edition = "2024"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["image", "image-manipulation", "meme", "pepe", "kek"]
readme = "README.md"
repository = "https://github.com/archer884/annatar"
homepage = "https://github.com/archer884/annatar"
categories = ["multimedia::images"]
description = """
A command line tool for making memes.

Full readme available at: https://github.com/archer884/annatar
"""

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0

[dependencies]
artano = "0.3.13"
clap = { version = "4.5.35", features = ["derive"] }
dotenv = "0.15.0"
font-kit = "0.14.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
textwrap = { version = "0.16.2", features = ["terminal_size"] }
